--- a/style.css
+++ b/style.css
@@ -2,14 +2,17 @@ table {
     border-collapse: collapse;
   }
   
-  table, th, td {
+table, th, td {
     border: 1px solid black;
-  }
+}
 
 table tr th {
     background: #aff;
 }
 
+ul {
+    list-style-type: none;
+}
 
 table tr:nth-child(odd) td{
     background: beige;
